--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 				  </a>
 				  <ul class="dropdown-menu">
 					<li><a class="dropdown-item" href="{{ path('app_dashboard_exemple') }}">exemple</a></li>
-					<li><a class="dropdown-item" href="#">tag</a></li>
+					<li><a class="dropdown-item" href="{{ path('app_tag_index') }}">tag</a></li>
 					<li><a class="dropdown-item" href="#">etat</a></li>
 					<li><hr class="dropdown-divider"></li>
 					<li><a class="dropdown-item" href="#">activités</a></li>
